--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,7 @@ TODO:
 - [ ] sistema de niveles
 - [ ] sistema de guardado de estadisticas
 - [ ] sistema de configuracion de partida
+- [ ] pausa
 
 
 *Visuales:
